# promptoy

./: .gitignore  LICENSE  README.md  pyproject.toml
src/promptoy/: __init__.py
src/promptoy/interface/: chat.py  message.py
src/promptoy/interface/message/: format.py
src/promptoy/provider/: anthropic.py  llama_cpp.py  openai.py
tests/: __main__.py
tests/test_provider/: test_anthropic.py  test_llamacpp.py  test_openai.py
